--- a/install/playbooks/roles/sogo-milters/handlers/main.yml
+++ b/install/playbooks/roles/sogo-milters/handlers/main.yml
@@ -6,7 +6,7 @@
 
 - name: Restart milter service
   service:
-    name: milter-abook
+    name: milter-sogo-abook
     state: restarted
     enabled: true
 
