--- a/install/playbooks/roles/sogo-milters/tasks/main.yml
+++ b/install/playbooks/roles/sogo-milters/tasks/main.yml
@@ -13,15 +13,17 @@
     owner: postfix
     group: postfix
   with_items:
-    - /var/lib/milter-abook
-    - /run/milter-abook
+    - /var/lib/milter-sogo-abook
+    - /run/milter-sogo-abook
   loop_control:
     loop_var: path
 
 - name: Initialise the sogo database read-only password parameters
   tags: facts
   set_fact:
-    sogo_password_params: "{{ backup_directory }}/postgresql/sogo_ro.pwd {{ policies.system.password }}"
+    sogo_password_params: >-
+      {{ backup_directory }}/postgresql/sogo_ro.pwd
+      {{ policies.system.password }}
 
 - name: Create the sogo read-only database account password
   tags: facts
@@ -67,7 +69,7 @@
     - Restart milter service
   copy:
     src: milter-abook.py
-    dest: /usr/local/bin/milter-abook.py
+    dest: /usr/local/bin/milter-sogo-abook.py
     mode: 0755
 
 - name: Copy the address book search milter
@@ -76,5 +78,5 @@
     - Reload postfix
   template:
     src: milter-abook.service
-    dest: /etc/systemd/system/milter-abook.service
+    dest: /etc/systemd/system/milter-sogo-abook.service
     mode: 0644
