--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -298,6 +298,9 @@ hugo_default:
 webmail_default:
   install: true
   type: roundcube
+  milters:
+    active: false
+    debug: true
 
 ###############################################################################
 # Default list of development packages to install
